Adding Setting Up

--- a/MadamX.Ver.1.0/Info.plist
+++ b/MadamX.Ver.1.0/Info.plist
@@ -47,6 +47,14 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string>Madam X requires access to get your location</string>
+	<string>We&apos;ll use this to personalize your app experience</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>We&apos;ll use this to personalize your app experience</string>
+	<key>NSMotionUsageDescription</key>
+	<string>We&apos;ll use this to personalize your app experience</string>
+	<key>CFBundleAllowMixedLocalizations</key>
+	<true/>
+	<key>NFCReaderUsageDescription</key>
+	<string>We&apos;ll use this to personalie your app experience</string>
 </dict>
 </plist>
